Add slippage controls to swap panel

--- a/Dex/client/src/globals.css
+++ b/Dex/client/src/globals.css
@@ -132,4 +132,12 @@
   .no-arrows {
     -moz-appearance: textfield;
   }
+
+  .slippage-input {
+    @apply text-xxs font-semibold;
+  }
+
+  .safemode-toggle {
+    @apply text-xxs font-semibold;
+  }
 }
