--- a/Dex/client/src/globals.css
+++ b/Dex/client/src/globals.css
@@ -119,6 +119,10 @@
     @apply bg-isbjorn-blue hover:bg-isbjorn-blue-hover text-white flex gap-2 w-full;
   }
 
+  .remove-liq-button {
+    @apply bg-isbjorn-blue hover:bg-isbjorn-blue-hover text-white flex gap-2 w-full;
+  }
+
   .profile-card-connect-button {
     @apply bg-white border border-isbjorn-dark text-dodger-blue;
   }
