add quick links from manage liq and swap panels

--- a/Dex/client/src/globals.css
+++ b/Dex/client/src/globals.css
@@ -174,4 +174,8 @@
   .tab-trigger:hover {
     @apply bg-isbjorn-blue-hover; /* Hover effect */
   }
+
+  .blue-link {
+    @apply text-isbjorn-blue underline hover:text-isbjorn-blue-hover;
+  }
 }
